# rust-memstream

./: Cargo.toml  README.md
src/: lib.rs  memstream.rs
