[package]

name = "memstream"
description = "A reader + writer stream backed by an in-memory buffer."
version = "0.1.0"
authors = ["Sean Chen <seanchen11235@gmail.com>"]
license = "MIT"
repository = "https://github.com/seanchen1991/rust-memstream"
homepage = "https://github.com/seanchen1991/rust-memstream"

[lib]

path = "src/lib.rs"
doctest = false
